# Webservportal

./: .gitignore  CMakeLists.txt  README.md  abstra.json  requirements.txt
BackEnd/: prestart.py  pyproject.toml
BackEnd/app/: app.py  asgi.py  manage.py  settings.py
BackEnd/app/schemas/: schemas.py
BackEnd/app/server/: app01.py  database.py  schemas.py  users.json
BackEnd/app/server/db/: userModel.js  webservportaldb.webservportal.json
BackEnd/app/server/routes/: login_form_registration.py
BackEnd/rust-api/: Cargo.toml
BackEnd/rust-api/src/: main.rs  main2.rs
Frontend/: main.py  pyproject.toml
Frontend/app/: users.py
Frontend/app/crud/: users.py
Frontend/app/server/: app.py  app02.py  users.py
Frontend/app/server/db/: db.py  dbConnect.js
Frontend/app/server/models/: login_form_registration.py  product_review.py
Frontend/app/tests/: debug.py
docs/: Attributions.md  CHANGELOG.md  Contributing.md  ProjectStructure.md  README.md  References.md  Scratchpad2.md  flowexecution.md
docs/AUTHORS/: config.toml  termsandconditions.js  termsandconditions.ts
docs/LICENSE/: config.toml
docs/sphinxdocs/: CMakeLists.txt
docs/sphinxdocs/docs/: readme_link.rst
docs/sphinxdocs/docs/source/: conf.py  index.rst
forms/: employee_registration.py
