[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
hyper = { version = "1.7.0", features = ["server"] }
axum-server = "0.7.2"
serde = { version = "1", features = ["derive"] }

[profile.dev]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = true     # Enables integer overflow checks.
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev.build-override]
opt-level = 0
codegen-units = 256
debug = false # when possible

[profile.release.build-override]
opt-level = 0
codegen-units = 256
